holyc-parser/tests/corpus/passing/089-stmt-stmt-do-while.hc
U0 SE_dw()  { I64 i=0; do { i++; } while (i<3); }
