holyc-parser/tests/corpus/failing/004-bug-compat-bug55-dowhile-missing-semi.hc
U0 B55_f() { I64 i=0; do { i++; } while (i<3) }
